fixed the overflow issue on chrome

--- a/client/src/components/navBar/style.css
+++ b/client/src/components/navBar/style.css
@@ -32,9 +32,11 @@ display: flex;
 list-style-type:none;
 position: relative;
 height: 5%;
-padding-right: 5%;
 padding-left: 5%;
+padding-right: 5%;
+
 width:fit-content;
+max-width: 80%;
 flex-direction: row;
 /* margin-left:30rem; */
 top:0%;
